--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=frefrigel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:VNLbGfRlKOfodf+oIHxDCJf4gBLSkxvfxSedMpBkX/A=
 APP_DEBUG=true
 APP_URL=http://localhost
 
